@@ -29,7 +29,7 @@ from rcsb.utils.targets.PharosTargetCofactorProvider import PharosTargetCofactor
 from rcsb.utils.targets.PharosTargetCofactorProvider import PharosTargetCofactorAccessor
 
 HERE = os.path.abspath(os.path.dirname(__file__))
-TOPDIR = os.path.dirname(os.path.dirname(HERE))
+TOPDIR = os.path.dirname(os.path.dirname(os.path.dirname(HERE)))
 
 logging.basicConfig(level=logging.INFO, format="%(asctime)s [%(levelname)s]-%(module)s.%(funcName)s: %(message)s")
 logger = logging.getLogger()
