@@ -1,8 +1,8 @@
 rcsb.db >= 1.721
-rcsb.utils.io >= 1.16
-rcsb.utils.chemref >= 0.78
-rcsb.utils.config >= 0.35
-rcsb.utils.seq >= 0.63
-rcsb.utils.taxonomy >= 0.37
-rcsb.utils.multiproc >= 0.18
+rcsb.utils.io >= 1.46
+rcsb.utils.chemref >= 0.93
+rcsb.utils.config >= 0.40
+rcsb.utils.seq >= 0.79
+rcsb.utils.taxonomy >= 0.43
+rcsb.utils.multiproc >= 0.20
 chembl-webresource-client >= 0.10.2
