@@ -72,3 +72,5 @@
                        Bug fix in ChEMBLTargetActivityProvider in updating cache file
    1-Jul-2024  - V0.78 Update SAbDabTargetProvider; Fix pylinting
   22-Jul-2024  - V0.79 Update SAbDabTargetProvider
+  20-Aug-2024  - V0.80 Add support for loading and accessing target cofactor data on MongoDB;
+                       Add mock-data submodule
